[package]
name = "panic-recovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "=0.2.0-alpha.5", package = "madsim-tokio", features = [
    "fs",
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
] }

# test panic hook overriding
[[bin]]
name = "test1"

# test stderr interleaving
[[bin]]
name = "test2"
